error.txt
test.cpp:5:12: error: Division by zero. [zerodiv]
 int y = 1 / x;
           ^
test.cpp:4:10: note: Assignment 'x=0', assigned value is 0
 int x = 0;
         ^
test.cpp:5:12: note: Division by zero
 int y = 1 / x;
           ^
test.cpp:5:8: style: Variable 'y' is assigned a value that is never used. [unreadVariable]
 int y = 1 / x;
       ^
